# capstone_ws

./: .README.md.swp  .gitignore  README.md  ScreenCamera_2025-04-05-23-40-22.json  ScreenCamera_2025-04-09-19-13-20.json  ScreenCamera_2025-04-09-19-13-29.json  ScreenCamera_2025-04-09-19-13-37.json  ScreenCamera_2025-04-10-20-49-18.json  ScreenCamera_2025-04-11-17-10-46.json  ScreenCamera_2025-04-11-17-11-57.json  ScreenCamera_2025-04-11-17-25-15.json  ScreenCamera_2025-04-11-23-27-55.json  frames.gv  gpoints.npy  rgbd.npy  rgbd_myhal.npy
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/px4_autonomy_modules/share/ament_index/resource_index/package_run_dependencies/: px4_autonomy_modules
install/px4_autonomy_modules/share/ament_index/resource_index/parent_prefix_path/: px4_autonomy_modules
install/px4_autonomy_modules/share/px4_autonomy_modules/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
install/px4_autonomy_modules/share/px4_autonomy_modules/cmake/: px4_autonomy_modulesConfig.cmake
install/rob498_drone/share/ament_index/resource_index/package_run_dependencies/: rob498_drone
install/rob498_drone/share/ament_index/resource_index/parent_prefix_path/: rob498_drone
install/rob498_drone/share/rob498_drone/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rob498_drone/share/rob498_drone/cmake/: rob498_droneConfig.cmake
log/: latest_build
offboard_py/: CMakeLists.txt  package.xml  setup.py
offboard_py/launch/: start_offb.launch.py
offboard_py/offboard_py/: offb_node.py
pcl_bag/: metadata.yaml
pcl_bag2/: metadata.yaml
pcl_bag_lime_search/: metadata.yaml
rgbd_npy_50/: rgbd_20250409_105536.npy  rgbd_20250409_105538.npy  rgbd_20250409_105539.npy  rgbd_20250409_105540.npy  rgbd_20250409_105541.npy  rgbd_20250409_105542.npy  rgbd_20250409_105544.npy  rgbd_20250409_105545.npy  rgbd_20250409_105546.npy  rgbd_20250409_105547.npy  rgbd_20250409_105548.npy  rgbd_20250409_105549.npy  rgbd_20250409_105550.npy  rgbd_20250409_105551.npy  rgbd_20250409_105552.npy  rgbd_20250409_105554.npy  rgbd_20250409_105555.npy  rgbd_20250409_105556.npy  rgbd_20250409_105557.npy  rgbd_20250409_105558.npy
rgbd_npy_apr14/: rgbd_20250414_135559.npy  rgbd_20250414_135601.npy  rgbd_20250414_135602.npy  rgbd_20250414_135604.npy  rgbd_20250414_135605.npy  rgbd_20250414_135606.npy  rgbd_20250414_135607.npy  rgbd_20250414_135609.npy  rgbd_20250414_135610.npy  rgbd_20250414_135611.npy  rgbd_20250414_135612.npy  rgbd_20250414_135614.npy  rgbd_20250414_135615.npy  rgbd_20250414_135616.npy  rgbd_20250414_135617.npy  rgbd_20250414_135618.npy  rgbd_20250414_135619.npy  rgbd_20250414_135621.npy  rgbd_20250414_135622.npy  rgbd_20250414_135623.npy
rgbd_npy_apr14_2/: rgbd_20250414_140312.npy  rgbd_20250414_140314.npy  rgbd_20250414_140316.npy  rgbd_20250414_140319.npy  rgbd_20250414_140320.npy
rgbd_npy_full/: rgbd_20250415_004116.npy  rgbd_20250415_004117.npy  rgbd_20250415_004118.npy  rgbd_20250415_004120.npy  rgbd_20250415_004121.npy  rgbd_20250415_004122.npy  rgbd_20250415_004123.npy  rgbd_20250415_004124.npy
rgbd_npy_mock/: rgbd_20250416_151546.npy  rgbd_20250416_151547.npy  rgbd_20250416_151548.npy  rgbd_20250416_151550.npy  rgbd_20250416_151551.npy  rgbd_20250416_151552.npy  rgbd_20250416_151553.npy  rgbd_20250416_151554.npy  rgbd_20250416_151555.npy  rgbd_20250416_151556.npy  rgbd_20250416_151557.npy  rgbd_20250416_151558.npy  rgbd_20250416_151559.npy  rgbd_20250416_151600.npy
rob498_drone/: CMakeLists.txt  package.xml  setup.cfg  setup.py
rob498_drone/rob498_drone/: comm_node.py  comm_node_task3.py  lc.py  project.py  run_servo.py  servo.ino  servo.py  task3.py  task3_pub.py  task3_testing.py  task4.py
rob498_sim/: CMakeLists.txt  package.xml  setup.cfg  setup.py
rob498_sim/launch/: px4_gazebo_launch.py
rob498_sim/rob498_sim/: task2_sim.py
rosbag_full/: metadata.yaml
src/: t265_stereo.py
src/mavros_sim/: package.xml  setup.cfg  setup.py
src/mavros_sim/launch/: mavros.launch.py
src/px4_autonomy_modules/: CMakeLists.txt  package.xml  setup.py
src/realsense_tracking/: package.xml  setup.cfg  setup.py
src/realsense_tracking/launch/: gscam.launch.py  realsense_t265.launch.py  stereo.launch.py
src/realsense_tracking/realsense_tracking/: 2dod_node.py  gui_node.py  imx219_node.py  inference.py  mapping_node.py  pcl_node.py  pcl_old.py  planner_node.py  save_bag.py  t265_node.py  tracking_node.py
src/rob498_drone/: CMakeLists.txt  comm_node.py  package.xml  setup.py  task_2.py
src/scripts/: .inference_actuation.py.swp  Arduino.py  arduino.py  camera_with_detection.py  depth_viz.py  extract_bag.py  gui.py  inference_actuation.py  mono.py  moving_pcl.py  mp4.py  planner.py  planner_clean.py  planner_old.py  pplot.py  servo.ino  simple_camera.py  t265_stereo.py  video-viewer.py
src/scripts/servo/: servo.ino
