<?xml version="1.0"?>
<package format="3">
  <name>rob498_sim</name>
  <version>0.0.1</version>
  <description>Simulation package for the rob498 drone</description>

  <maintainer email="youremail@example.com">Your Name</maintainer>
  <author email="youremail@example.com">Your Name</author>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>px4</depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
