<?xml version="1.0"?>
<package format="3">
  <name>px4_autonomy_modules</name>
  <version>0.0.1</version>
  <description>Autonomous drone control using MAVROS</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>mavros_msgs</depend>
  <depend>mavros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
