<?xml version="1.0"?>
<package format="3">
  <name>realsense_tracking</name>
  <version>0.1.0</version>
  <description>Tracking node using Intel RealSense T265 in ROS 2</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>realsense2_camera</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
