<?xml version="1.0"?>
<package format="2">
  <name>rob498_drone</name>
  <version>0.0.1</version>
  <description>A ROS 2 package for controlling a drone in Task 2</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>pytest</test_depend>
</package>
